--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
-  <h1>Michelle Bakels</h1>
-  <h2>About me</h2>
-  <p class="description">Dream college:</p>
-  <p>Biggest inspiration:</p>
-  <p>Favorite quote:</p>
+  <h1>Christin Smith</h1>
+  <h2>I am a hardworking highschool student athelte who aspires, to work in the medical field, I love challenging my self,  being creative and putting 100% in anything I set my mind to. </h2>
+  <p class="description"> Howard, Spellman, FSU, FAMU, UCF, Southern University, Palmbeach state, FIU, FMU, and Bethune Cookman University. :</p>
+  <p>Biggest inspiration: My self, i always push and encourage myself to do better, and everytime i reach a goal, or make my self proud the more inspired i become.
+  </p>
+  <p>Favorite quote:"Reach high the stars lie hidden in your soul, dream deep for every dream precedes the goal"- Tupac Shakur.      
+
+    
+  "If you are always trying to be normal, you will never know how amazing you can be" - Maya Angelou</p>
 </body>
 
 </html>
